extension/CSS/leaderboard.css
@import url('https://fonts.googleapis.com/css?family=Lato&display=swap');

/* HTML Element Style */

head {
    font-family: 'Lato';
    color: white;
}

body {
    font-family: 'Lato';
    color: #EEEEEE;
}

.button {
    font-size: 24px;
    width: 100px;
    font-size: 25px;
    font-family: 'Lato';
    box-shadow: inset 0 0 5px #333333;
    border-radius: 12px;
    background-color: #6388E8;
    border: none;
    color: white;
    width: 120px;
    cursor: pointer;
}

table {
    width: 90% !important;
    margin-left: auto;
    margin-right: auto;
    margin-top: 2%;
    overflow: auto;
    font-family: 'Lato';
    border-collapse: collapse;
}

tr {
    font-family: 'Lato';
    border-bottom: 1px solid #C0C0C0;
}

td {
    height: 25px;
}

th {
    width: 108px;
    height: 20px;
    text-align: left;
    overflow: auto;
}

th:first-child {
    text-align: left;
}

td:first-child {
    width: 10%;
}

td:nth-child(2) {
    text-align: left;
    width: 45%;
}

td:nth-child(3) {
    width: 35%;
}

td:last-child {
    width: 10%;
    text-align: right;
}



/* Custom Class Styles */

.card {
    text-align: center;
    border-radius: 12px;
    background-color: #3E3D3D;
    border-width: 5px;
    width: 240px;
    border-color: #C0C0C0;
    border-style: solid;
    min-height: 240px;
}

.header img {
    vertical-align: middle;
    float: left;
    padding-left: 10px;
    padding-top: 7px;
}

.header p {
    margin-top: 0;
    margin-bottom: 0;
    margin-left: 0;
    margin-right: 45px;
    width: 149px;
    float: right;
    padding-top: 7px;
    font-weight: bold;
    text-align: center;
}

.headerWOBackButton {
    margin-top: auto;
    margin-bottom: auto;
    
    font-size: 20px;
    box-shadow: inset 0 0 3px #333333;
    border-radius: 6px 6px 0 0;
    background-color: #57B582;
    border-width: none;
    width: 240px;
    height: 40px;
    position: relative;
}

.headerWOBackButton p {
    padding-top: 6px;
    margin: 0;
}

.sort {
    background-image: url('../images/rank.png');
    background-size: contain;
    background-repeat: no-repeat;
    height: 15px;
    width: 15px;
    display: block;
    float: left;
}

.bottom-buttons {
    width: 240px;
    position: fixed;
    margin-left: auto;
    margin-right: auto;
    bottom: 8%;
    left: 0;
    right: 0;
}

.bottom-buttons button {
    background-color: transparent;
    border: none;
    color: #C0C0C0;
}

.bottom-buttons img {
    width: 14px;
    height: 14px;
}

::-webkit-scrollbar-track
{
    margin-top: 2px;
    border-radius: 10px;
	background-color: transparent;
}

::-webkit-scrollbar
{
	width: 5px;
	background-color: transparent;
}

::-webkit-scrollbar-thumb
{
    margin-top: 2px;
    border-radius: 10px;
	background-color: #000000;
}

/* Custom id Styles */

#table-body {
    overflow-x: hidden;
    overflow-y: scroll;
    width: 100%;
    height: 125px;
    display: block;
    margin-top: 22px;
}

#team-col {
    padding-left: 8%;
}

